# superorg-mode

spore/chaterelle/: .env .example  .gitignore  README.md  pyproject.toml
spore/chaterelle/src/chaterelle/: substrate.py
spore/chaterelle/src/chaterelle/enzymes/: path_utils.py
spore/chaterelle/src/chaterelle/rhizomorphs/: transcribe.py
